# atlasclaw

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  atlasclaw.json  atlasclaw.json.example  atlasclaw.sh  atlasclaw.spec  cli_entry.py  package.sh  pyproject.toml  requirements.txt  test-file.txt  xuanwu.json  xuanwu.json.example
.github/workflows/: build.yml
app/: __init__.py
app/atlasclaw/: main.py
app/atlasclaw/agent/: compaction.py  compaction_safeguard.py  context_pruning.py  history_memory.py  plaintext_tool_calls.py  prompt_builder.py  prompt_context_resolver.py  prompt_sections.py  runner.py  runner_execution.py  runner_prompt_context.py  runner_tool_evidence.py  runner_tool_gate.py  runtime_events.py  selected_capability.py  thinking_stream.py  tool_gate.py  tool_gate_models.py
app/atlasclaw/api/: __init__.py  agent_capabilities.py  api_routes.py  channels.py  deps_context.py  gateway.py  provider_info_routes.py  request_orchestrator.py  routes.py  routes_agent.py  routes_session.py  routes_skills_memory.py  routes_webhook.py  schemas.py  service_provider_schemas.py  webhook_dispatch.py  websocket.py
app/frontend/: admin-users.html  channels.html  index.html  login.html  models.html  package-lock.json  package.json
app/xuanwu/: __init__.py  main.py
docker/: .env.example
docs/: ARCHITECTURE.MD  AtlasClaw-SmartCMP-GUID.docx  CHANNEL-GUIDE.MD  DEPLOYMENT.md  DEVELOPMENT-SPEC.MD  FILE-STRUCTURE.MD  MODULE-DETAILS.MD  OVERVIEW.md  PROJECT_OVERVIEW.md  PROVIDER-GUIDE.MD  QUICKSTART-SMARTCMP.md  SKILL-GUIDE.MD  UNIFIED_PROVIDER_TOOL_CONTRACT.md  Xuanwu Plugins.MD  python-god-file-refactor-plan.md
docs/automation/: webhook.md
docs/plans/: 2026-03-11-channel-integrations-design.md  2026-03-11-channel-integrations-implementation.md  2026-03-12-external-providers-root-design.md  2026-03-12-external-providers-root.md  2026-03-12-provider-qualified-skills-design.md  2026-03-12-provider-qualified-skills.md  2026-03-27-session-scope-and-threading-design.md  2026-03-27-session-scope-implementation-plan.md
hooks/: runtime_hook.py
migrations/: env.py
migrations/versions/: 008_scope_usernames_by_auth_type.py  009_add_channel_provisioning_sessions.py
scripts/: build-offline-package.sh  build_binary.py  migrate_config.py
tests/: atlasclaw.test.json  conftest.py  xuanwu.test.json
tests/atlasclaw/: test_agent.py  test_agent_capabilities.py  test_agent_no_provider_guard.py  test_agent_run_api.py  test_builtin_tool_registration.py  test_catalog_query_tool.py  test_channel_manager.py  test_channels.py  test_channels_api.py  test_cmp_admin_login_api.py  test_compaction_alignment.py  test_config_workspace.py  test_context_pruning.py  test_deployment_logging_standard.py  test_dingtalk_handler.py  test_enterprise_channels.py  test_feishu_handler.py  test_fetch_tool.py  test_gateway.py  test_history_memory_coordinator.py  test_hook_api_routes.py  test_hook_runtime_dispatcher.py  test_hook_runtime_sinks.py  test_hook_script_runtime.py  test_host_cookie_admin_login_api.py  test_local_auth_api.py  test_main_startup.py  test_markdown_vault_agent_flow.py  test_md_skills.py  test_md_tool_runtime.py  test_memory.py  test_memory_api.py  test_memory_api_routes.py  test_memory_search_api.py  test_memory_tool_citations.py  test_object_actions.py  test_openai_chat_compat.py  test_pptx_skill_handler.py  test_prompt_context_resolver.py  test_provider_info_routes.py  (+26 more)
tests/frontend/: account-auth-config.test.js  account-settings.test.js  admin-users.test.js  auth.test.js  channels-page.test.js  chat-page.test.js  chat-ui.test.js  header.test.js  i18n.test.js  providers-page.test.js  role-management.test.js  session-manager.test.js  stream-handler.test.js
tests/markdown-vault-atlasclaw-docs/: conversations.md  skills-and-tools.md  user-guide.md
tests/playwright/: test_memory_ui.py
tests/xuanwu/: __init__.py  test_agent.py  test_agent_chat_scenarios.py  test_agent_info_api.py  test_agent_integration.py  test_agent_run_api.py  test_auth_registry.py  test_channel_hooks.py  test_channel_manager.py  test_channels.py  test_channels_api.py  test_config_workspace.py  test_core.py  test_dingtalk_handler.py  test_enterprise_channels.py  test_execution_context.py  test_feishu_handler.py  test_gateway.py  test_local_auth_api.py  test_main_startup.py  test_md_skills.py  test_media.py  test_memory.py  test_messages.py  test_model_configs.py  test_provider_scanner.py  test_response_handler.py  test_routing.py  test_security_restrictions.py  test_session.py  test_session_api_routes.py  test_sse_replay.py  test_tenant.py  test_token_pool_components.py  test_webhook_dispatch.py  test_workflow.py  test_workspace.py  test_xuanwu_runtime_tools.py
(+273 files in other folders)
